# system-monitor

./: .gitignore  GITHUB_SETUP.md  README.md  TEST_RELEASE_GUIDE.md  build.bat  check_yaml.py  config.example.json  create_icon.py  local_test_full.py  main.py  nuitka-crash-report.xml  pyproject.toml  quick_test.py  release.py  test_release.py
.github/workflows/: release.yml  test_release.yml
src/api/: __init__.py  google_sheets.py
src/config/: __init__.py  settings.py
src/monitor/: __init__.py  file_scanner.py  system_info.py
src/ui/: __init__.py  settings_window.py  settings_window_fixed.py  settings_window_new.py  tray_icon.py
